Fixed icons and other spacing issues on Homepage

--- a/assets/styles/component-styles/home-about-module.scss
+++ b/assets/styles/component-styles/home-about-module.scss
@@ -15,7 +15,11 @@
   }
 
   .zuc-about-icons {
-    margin-right: 25%;
+
+    @media #{$laptop-up} {
+      margin-right: 25%;
+    }
+
   }
 }
 
